Implementacion de rutas de links
