# src/routes/index.js
@@ -1,7 +1,9 @@
 const express = require("express");
-const authRoutes = require("../routes/auth.routes");
+const authRoutes = require("./auth.routes");
+const linkRoutes = require("./link.routes")
 const router = express.Router();
 
 router.use("/auth", authRoutes);
+router.use("/links", linkRoutes);
 
 module.exports = router;
