# src/routes/link.routes.js
@@ -1,0 +1,19 @@
+const express = require("express");
+const router = express.Router();
+const {
+  createLink,
+  getLinkByCode,
+  getUserLinks,
+  deleteLink,
+} = require("../controllers/link.controller");
+const authenticate = require("../middlewares/authenticate.middleware");
+
+router.post("/", authenticate(false), createLink);
+
+router.get("/:shortCode", getLinkByCode);
+
+router.get("/", authenticate(true), getUserLinks);
+
+router.delete("/:id", authenticate(true), deleteLink);
+
+module.exports = router;
